objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>BIR Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Duplicate - Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Concerned Department</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cargo</fullName>
        <description>For Cargo</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Duplicate - Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Concerned Department</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Others</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Duplicate - Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Junk</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Concerned Department</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reservation Admin Request</fullName>
        <description>Leave Management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reservation Operations</fullName>
        <description>For Internal Use</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AWB_No__c</fullName>
        <description>For Cargo;to capture Air Way Bill No</description>
        <label>AWB No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Comment__c</fullName>
        <label>Admin Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Subject__c</fullName>
        <label>Admin Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leave Request</fullName>
                </value>
                <value>
                    <fullName>Shift Swap Request</fullName>
                </value>
                <value>
                    <fullName>Week Off Swap</fullName>
                </value>
                <value>
                    <fullName>Shift Request</fullName>
                </value>
                <value>
                    <fullName>Week Off Request</fullName>
                </value>
                <value>
                    <fullName>Self Transport</fullName>
                </value>
                <value>
                    <fullName>Admin Complain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Airport</label>
        <referenceTo>Airport_Name__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arrival_Station__c</fullName>
        <label>Arrival Station</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PNR_Record__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adampur(VIAX)</fullName>
                </value>
                <value>
                    <fullName>Agartala (IXA)</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad (AMD)</fullName>
                </value>
                <value>
                    <fullName>Aizawl (AJL)</fullName>
                </value>
                <value>
                    <fullName>Amritsar (ATQ)</fullName>
                </value>
                <value>
                    <fullName>Bagdogra (IXB)</fullName>
                </value>
                <value>
                    <fullName>Bangkok (BKK)</fullName>
                </value>
                <value>
                    <fullName>Belagavi (IXG)</fullName>
                </value>
                <value>
                    <fullName>Bengaluru (BLR)</fullName>
                </value>
                <value>
                    <fullName>Chandigarh (IXC)</fullName>
                </value>
                <value>
                    <fullName>Chennai (MAA)</fullName>
                </value>
                <value>
                    <fullName>Coimbatore (CJB)</fullName>
                </value>
                <value>
                    <fullName>Colombo (CMB)</fullName>
                </value>
                <value>
                    <fullName>Dehradun (DED)</fullName>
                </value>
                <value>
                    <fullName>Delhi (DEL)</fullName>
                </value>
                <value>
                    <fullName>Dhaka(DAC)</fullName>
                </value>
                <value>
                    <fullName>Dharamshala (DHM)</fullName>
                </value>
                <value>
                    <fullName>Dibrugarh (DIB)</fullName>
                </value>
                <value>
                    <fullName>Dubai (DXB)</fullName>
                </value>
                <value>
                    <fullName>Goa (GOI)</fullName>
                </value>
                <value>
                    <fullName>Gorakhpur (GOP)</fullName>
                </value>
                <value>
                    <fullName>Guwahati (GAU)</fullName>
                </value>
                <value>
                    <fullName>Hyderabad (HYD)</fullName>
                </value>
                <value>
                    <fullName>Jabalpur (JLR)</fullName>
                </value>
                <value>
                    <fullName>Jaipur (JAI)</fullName>
                </value>
                <value>
                    <fullName>Jaisalmer(JSA)</fullName>
                </value>
                <value>
                    <fullName>Jammu (IXJ)</fullName>
                </value>
                <value>
                    <fullName>Jodhpur (JDH)</fullName>
                </value>
                <value>
                    <fullName>Kabul (KBL)</fullName>
                </value>
                <value>
                    <fullName>Kandla(IXY)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Shift__c</fullName>
        <label>Assigned Shift</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0700-1600</fullName>
                </value>
                <value>
                    <fullName>0800-1700</fullName>
                </value>
                <value>
                    <fullName>0900-1800</fullName>
                </value>
                <value>
                    <fullName>1000-1900</fullName>
                </value>
                <value>
                    <fullName>1100-2000</fullName>
                </value>
                <value>
                    <fullName>1200-2100</fullName>
                </value>
                <value>
                    <fullName>1500-0000</fullName>
                </value>
                <value>
                    <fullName>1600-0100</fullName>
                </value>
                <value>
                    <fullName>1700-0200</fullName>
                </value>
                <value>
                    <fullName>2100-0600</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Week_Off_Date__c</fullName>
        <label>Assigned Week Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIR_No__c</fullName>
        <label>BIR No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIR_Physical_Form_No__c</fullName>
        <description>To be used to enter Physical BIR form no</description>
        <label>BIR Physical Form No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIR_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BIR Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIR_Tracer__c</fullName>
        <label>BIR Tracer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Found</fullName>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIR_Type__c</fullName>
        <label>BIR Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AHL</fullName>
                </value>
                <value>
                    <fullName>DPR</fullName>
                </value>
                <value>
                    <fullName>OHD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baggage_Approximate_Cost__c</fullName>
        <label>Baggage Approximate Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baggage_Color__c</fullName>
        <label>Baggage Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BE – Beige / Cream / Ivory</fullName>
                </value>
                <value>
                    <fullName>BK – Black</fullName>
                </value>
                <value>
                    <fullName>BN – Brown / Tan / Taupe / Bronze / Copper</fullName>
                </value>
                <value>
                    <fullName>BU – Blue / Turquoise</fullName>
                </value>
                <value>
                    <fullName>GN – Green / Olive / Jade</fullName>
                </value>
                <value>
                    <fullName>GY – Grey / Silver / Aluminum</fullName>
                </value>
                <value>
                    <fullName>MC – Two or more solid colors, excluding trim</fullName>
                </value>
                <value>
                    <fullName>PR – Print / Pattern / Floral / Spotted / Tapestry / Stripe / Plaid</fullName>
                </value>
                <value>
                    <fullName>PU – Purple / Violet / Lilac</fullName>
                </value>
                <value>
                    <fullName>RD – Red / Maroon / Pink / Mauve / Burgundy</fullName>
                </value>
                <value>
                    <fullName>WT – White / Clear</fullName>
                </value>
                <value>
                    <fullName>YW – Yellow / Orange / Gold</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baggage_Tag__c</fullName>
        <label>Baggage Tag #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baggage_Type__c</fullName>
        <label>Baggage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backpack/Rucksack</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Briefcase</fullName>
                </value>
                <value>
                    <fullName>Document Case</fullName>
                </value>
                <value>
                    <fullName>Duffle/Sport Bag</fullName>
                </value>
                <value>
                    <fullName>Expandable upright</fullName>
                </value>
                <value>
                    <fullName>Garment Bag/Suit Carrier</fullName>
                </value>
                <value>
                    <fullName>Horizontal design Hard Shell</fullName>
                </value>
                <value>
                    <fullName>Horizontal design suitcase</fullName>
                </value>
                <value>
                    <fullName>Horizontal design suitcase - Expandable</fullName>
                </value>
                <value>
                    <fullName>Horizontal design suitcase – Non-expandable</fullName>
                </value>
                <value>
                    <fullName>Lap Top/Overnight bag</fullName>
                </value>
                <value>
                    <fullName>Matted woven bag</fullName>
                </value>
                <value>
                    <fullName>Military Style Bag</fullName>
                </value>
                <value>
                    <fullName>Plastic/Laundry Bag</fullName>
                </value>
                <value>
                    <fullName>Storage Container</fullName>
                </value>
                <value>
                    <fullName>Upright design</fullName>
                </value>
                <value>
                    <fullName>Upright design, combined hard and soft material</fullName>
                </value>
                <value>
                    <fullName>Upright design, hard material</fullName>
                </value>
                <value>
                    <fullName>Upright design, Soft material</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_name_of_Suitcase__c</fullName>
        <label>Brand name of Suitcase</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_Type__c</fullName>
        <description>for Cargo</description>
        <label>Cargo Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air to Air</fullName>
                </value>
                <value>
                    <fullName>Door to Door</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>ClosedDate - CreatedDate</formula>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Creator_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Creator Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Duration_Hours__c</fullName>
        <formula>IF(
 FLOOR((ClosedDate - First_Response_Time__c)*24)&gt;9,
 Text(FLOOR((ClosedDate - First_Response_Time__c)*24)),
 &quot;0&quot; &amp; TEXT(FLOOR((ClosedDate - First_Response_Time__c)*24))
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Duration Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Duration_Minutes__c</fullName>
        <formula>IF(
 ROUND(MOD((ClosedDate - First_Response_Time__c)*1440,60),0)&gt;9,TEXT(ROUND(MOD((ClosedDate - 
 First_Response_Time__c)*1440,60),0)),
 &quot;0&quot; &amp; TEXT(ROUND(MOD((ClosedDate - 
 First_Response_Time__c)*1440,60),0))
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Duration Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Duration__c</fullName>
        <formula>ClosedDate - First_Response_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Duration</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Duration_hh_mm__c</fullName>
        <formula>IF( Case_Duration_Hours__c  &amp;  Case_Duration_Minutes__c = &quot;0:0&quot;,&quot;00:00&quot;, Case_Duration_Hours__c  &amp; 
 &quot;.&quot; &amp;  Case_Duration_Minutes__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Duration (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Log_Time_Slot__c</fullName>
        <formula>IF( 
    LEN(Hour__c) = 1, 
     &apos;0&apos; + Hour__c+ &apos;:00 - 0&apos; + Hour__c+ &apos;:59&apos;,
   Hour__c+ &apos;:00 - &apos; + Hour__c + &apos;:59&apos;
  )</formula>
        <label>Case Log Time Slot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reservation Operations</fullName>
                    <default>true</default>
                    <label>Reservation Operations</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categor__c</fullName>
        <label>Categor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>Delay - Controllable</fullName>
                </value>
                <value>
                    <fullName>ATOM IVR</fullName>
                </value>
                <value>
                    <fullName>Service Complaint</fullName>
                </value>
                <value>
                    <fullName>Travel Agency Booking Error</fullName>
                </value>
                <value>
                    <fullName>Promotion /Campaigns</fullName>
                </value>
                <value>
                    <fullName>Add-ons Issue</fullName>
                </value>
                <value>
                    <fullName>Bad Landing/Complaint</fullName>
                </value>
                <value>
                    <fullName>Staff Error</fullName>
                </value>
                <value>
                    <fullName>Aircraft interior</fullName>
                </value>
                <value>
                    <fullName>Online Bank transfer</fullName>
                </value>
                <value>
                    <fullName>Legal Notice</fullName>
                </value>
                <value>
                    <fullName>No-show/gate no show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AC not working</fullName>
                </value>
                <value>
                    <fullName>Add-ons Issue</fullName>
                </value>
                <value>
                    <fullName>Aircraft Interior</fullName>
                </value>
                <value>
                    <fullName>Ancillary Revenue</fullName>
                </value>
                <value>
                    <fullName>Atom IVR</fullName>
                </value>
                <value>
                    <fullName>Bad Landing</fullName>
                </value>
                <value>
                    <fullName>Bad Landing/Complaint</fullName>
                </value>
                <value>
                    <fullName>Baggage Exchange</fullName>
                </value>
                <value>
                    <fullName>Baggage Interchange</fullName>
                </value>
                <value>
                    <fullName>Cancellation - Controllable</fullName>
                </value>
                <value>
                    <fullName>Cancellation - Uncontrollable</fullName>
                </value>
                <value>
                    <fullName>Cargo Services</fullName>
                </value>
                <value>
                    <fullName>CAR- Online Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Carry - on - Lost</fullName>
                </value>
                <value>
                    <fullName>Carry - on - Lost &amp; Found</fullName>
                </value>
                <value>
                    <fullName>Catering - Meal Quality</fullName>
                </value>
                <value>
                    <fullName>Catering - Meal Quantity</fullName>
                </value>
                <value>
                    <fullName>Catering Service Complaints</fullName>
                </value>
                <value>
                    <fullName>Compensation - Baggage Mishandling</fullName>
                </value>
                <value>
                    <fullName>Compensation - Flight Cancellation</fullName>
                </value>
                <value>
                    <fullName>Compensation - NEGBAL</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Compliment Medical Assistance</fullName>
                </value>
                <value>
                    <fullName>Configuration Change</fullName>
                </value>
                <value>
                    <fullName>Contents Damaged-Domestic</fullName>
                </value>
                <value>
                    <fullName>Contents Damaged-International</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Delay - Controllable</fullName>
                </value>
                <value>
                    <fullName>Delay - Uncontrollable</fullName>
                </value>
                <value>
                    <fullName>Denied Boarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Amount_Paid__c</fullName>
        <label>Claim Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>IF( NOT(ISBLANK(ContactId)),

    BLANKVALUE(TEXT(Contact.Salutation), &quot;&quot;) &amp;IF(ISBLANK(TEXT(Contact.Salutation)),&quot;&quot;,&quot; &quot;)&amp; BLANKVALUE(Contact.FirstName, &quot;&quot;) &amp;IF(ISBLANK(Contact.FirstName),&quot;&quot;,&quot; &quot;)&amp; BLANKVALUE(Contact.LastName, &quot;&quot;), 

    BLANKVALUE(SuppliedName,&quot;SpiceJet Customer&quot;) 
)</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contents__c</fullName>
        <inlineHelpText>4 distinctive items</inlineHelpText>
        <label>Contents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count_of_Tracer_Found__c</fullName>
        <label>Count of Tracer - Found</label>
        <summaryFilterItems>
            <field>BIR_Tracer__c.Status__c</field>
            <operation>equals</operation>
            <value>Found</value>
        </summaryFilterItems>
        <summaryForeignKey>BIR_Tracer__c.BIR__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_By_CRM_Id__c</fullName>
        <description>For Reservations Team Reporting purpose</description>
        <formula>LEFT(CreatedBy.Username,Find(&quot;@&quot;,CreatedBy.Username)-1)</formula>
        <label>Created By CRM Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Bulk_BIR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Bulk BIR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Critical_Reason__c</fullName>
        <label>Critical Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Time__c</fullName>
        <label>Declaration Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Airport Services</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Cockpit</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Engineering/ MCC</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>FSC</fullName>
                </value>
                <value>
                    <fullName>Guest Error</fullName>
                </value>
                <value>
                    <fullName>In- Flight</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal/HR</fullName>
                </value>
                <value>
                    <fullName>Marketing/ Products</fullName>
                </value>
                <value>
                    <fullName>Reservation Administration</fullName>
                </value>
                <value>
                    <fullName>Reservations</fullName>
                </value>
                <value>
                    <fullName>SalesRevenue</fullName>
                    <label>Sales/Revenue</label>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>SpiceVacation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departure_Station__c</fullName>
        <label>Departure Station</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PNR_Record__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adampur(VIAX)</fullName>
                </value>
                <value>
                    <fullName>Agartala (IXA)</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad (AMD)</fullName>
                </value>
                <value>
                    <fullName>Aizawl (AJL)</fullName>
                </value>
                <value>
                    <fullName>Amritsar (ATQ)</fullName>
                </value>
                <value>
                    <fullName>Bagdogra (IXB)</fullName>
                </value>
                <value>
                    <fullName>Bangkok (BKK)</fullName>
                </value>
                <value>
                    <fullName>Belagavi (IXG)</fullName>
                </value>
                <value>
                    <fullName>Bengaluru (BLR)</fullName>
                </value>
                <value>
                    <fullName>Chandigarh (IXC)</fullName>
                </value>
                <value>
                    <fullName>Chennai (MAA)</fullName>
                </value>
                <value>
                    <fullName>Coimbatore (CJB)</fullName>
                </value>
                <value>
                    <fullName>Colombo (CMB)</fullName>
                </value>
                <value>
                    <fullName>Dehradun (DED)</fullName>
                </value>
                <value>
                    <fullName>Delhi (DEL)</fullName>
                </value>
                <value>
                    <fullName>Dhaka(DAC)</fullName>
                </value>
                <value>
                    <fullName>Dharamshala (DHM)</fullName>
                </value>
                <value>
                    <fullName>Dibrugrah(DIB)</fullName>
                </value>
                <value>
                    <fullName>Dubai (DXB)</fullName>
                </value>
                <value>
                    <fullName>Goa (GOI)</fullName>
                </value>
                <value>
                    <fullName>Gorakhpur (GOP)</fullName>
                </value>
                <value>
                    <fullName>Guwahati (GAU)</fullName>
                </value>
                <value>
                    <fullName>Hyderabad (HYD)</fullName>
                </value>
                <value>
                    <fullName>Jabalpur (JLR)</fullName>
                </value>
                <value>
                    <fullName>Jaipur (JAI)</fullName>
                </value>
                <value>
                    <fullName>Jaisalmer(JSA)</fullName>
                </value>
                <value>
                    <fullName>Jammu (IXJ)</fullName>
                </value>
                <value>
                    <fullName>Jodhpur (JDH)</fullName>
                </value>
                <value>
                    <fullName>Kabul (KBL)</fullName>
                </value>
                <value>
                    <fullName>Kandla(IXY)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Desired_Shift__c</fullName>
        <label>Desired Shift</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0700-1600</fullName>
                </value>
                <value>
                    <fullName>0800-1700</fullName>
                </value>
                <value>
                    <fullName>0900-1800</fullName>
                </value>
                <value>
                    <fullName>1000-1900</fullName>
                </value>
                <value>
                    <fullName>1100-2000</fullName>
                </value>
                <value>
                    <fullName>1200-2100</fullName>
                </value>
                <value>
                    <fullName>1500-0000</fullName>
                </value>
                <value>
                    <fullName>1600-0100</fullName>
                </value>
                <value>
                    <fullName>1700-0200</fullName>
                </value>
                <value>
                    <fullName>2100-0600</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Week_Off_Date__c</fullName>
        <label>Desired Week Off Date</label>
        <type>Date</type>
    </fields>
</CustomObject>